--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL= 'https://dylan-ruizfullstackres.herokuapp.com/'
+NEXT_PUBLIC_API_URL= 'https://dylan-ruizfullstackres.herokuapp.com'
